--- a/other/googlebaseball/index.html
+++ b/other/googlebaseball/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+    <link rel="icon" type="image/x-icon" href="/img/newlogo.png" />
+    <title>AlgebraHelper</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/assets/img/logotransparent.png" type="image/x-icon">
+    <body scroll="no" style="overflow: hidden">
+    
+<!-- Google tag (gtag.js) -->
+<script
+async
+src="https://www.googletagmanager.com/gtag/js?id=G-XXGG6SJL6H"
+></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag() {
+  dataLayer.push(arguments);
+}
+gtag("js", new Date());
 
+gtag("config", "G-XXGG6SJL6H");
+</script>
+    </script>
+
+<iframe src="https://www.google.com/logos/2019/july4th19/r6/july4th19.html?hl=en"></iframe>
+    <script src="/html/settings/js/index.js"></script> 
+   </body>
+</html>
